--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,7 @@ ul{
     list-style-type: none;
 }
 
-button{
-    font-family: 'Courier New', Courier, monospace;
-}
+
 h1{
     font-family: 'franklin gothic';
     color:rgb(202, 201, 200);
@@ -21,7 +19,7 @@ body{
     display: flex;
 }
 
-button{
+.firstbutton{
     font-family: 'franklin gothic';
     margin-left: 15px;
     margin-right: 5px;
@@ -30,8 +28,25 @@ button{
     cursor: pointer;
 
 }
-button:hover{
+.SUBjs{
+    color:black;
+    background-color: grey;
+    margin: 30px;
+    padding:10px;
+    border-radius: 20px;
+    border: none;
+}
+.SUBbutton{
+    margin: 30px;
+    padding:10px;
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+    border: none;
+}
+/* button:hover{
     background-color: rgb(0, 0, 0);
     color: grey;
     
-}
+} */
+
